# FintoAI

./: .env.example  .gitignore  README.md  pyproject.toml
src/fintoai/: __init__.py  config.py
src/fintoai/providers/: __init__.py  base.py  csv_provider.py
tests/: test_config.py  test_csv_provider.py  test_providers.py
