[project]
name = "fintoai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Naveen SHIVPURA VEERESH", email = "naveensveeresh@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "langgraph>=1.1.10",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[project.scripts]
fintoai = "fintoai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
